# OnScreen

./: CONTRIBUTING.md  INSTALL.md  README.md  ROADMAP.md  index.html  on-screen.desktop  onscreen.html  package.json
app/src-tauri/: tauri.conf.json
docs/: index.html
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
