[package]
name = "on-screen"
version = "1.0.0"
description = "Interactive desktop pinboard at the OS desktop layer"
authors = ["octagg"]
license = "MIT"
repository = "https://github.com/octagg/OnScreen"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "fs-all",
  "dialog-all",
  "path-all",
  "window-set-decorations",
  "window-set-fullscreen",
  "window-set-always-on-bottom",
  "window-set-skip-taskbar"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"   # optimize for size — keeps the binary lean
strip = true
